--- a/app/src/main/res/layout/activity_geofence.xml
+++ b/app/src/main/res/layout/activity_geofence.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.GeofenceActivity">
 
+    <TextView
+        android:id="@+id/geo_alarm_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/geo_alarm_title_value"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Geofencing alarm name"
+        />
+
+    <TextView
+        android:id="@+id/geo_alarm_title_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/geo_alarm_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/default_name"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
