--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/create_alarm"
+        android:layout_width="@dimen/new_alarm_btn_size"
+        android:layout_height="@dimen/new_alarm_btn_size"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:layout_marginBottom="@dimen/item_padding"
+        android:layout_marginEnd="@dimen/item_padding"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/create_alarm_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/new_alarm_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
