--- a/app/src/main/res/layout/activity_new_geofence.xml
+++ b/app/src/main/res/layout/activity_new_geofence.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".ui.NewGeofenceActivity">
 
+    <TextView
+        android:id="@+id/geo_alarm_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/geo_alarm_title_input"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/geo_alarm_name_title"
+        />
+
+    <EditText
+        android:id="@+id/geo_alarm_title_input"
+        android:layout_width="@dimen/edit_text_width"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/geo_alarm_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:inputType="text" /> <!-- TODO -->
+
+    <Button
+        android:id="@+id/open_map_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/geo_alarm_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/save_btn"
+        android:text="@string/open_map_title"
+        />
+
+    <Button
+        android:id="@+id/save_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/open_map_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/save_text_btn"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
