--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
 
     <ImageButton
-        android:id="@+id/create_alarm"
+        android:id="@+id/add_geofence_btn"
         android:layout_width="@dimen/new_alarm_btn_size"
         android:layout_height="@dimen/new_alarm_btn_size"
         android:adjustViewBounds="true"
@@ -25,7 +25,7 @@
         android:layout_marginBottom="@dimen/item_padding"
         android:layout_marginEnd="@dimen/item_padding"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/create_alarm_icon"
+        android:src="@drawable/new_geofence_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/new_alarm_description" />
 
