--- a/app/src/main/res/layout/list_item_geofence.xml
+++ b/app/src/main/res/layout/list_item_geofence.xml
@@ -3,11 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/purple_500"
     android:layout_height="@dimen/list_item_height"
     android:paddingStart="@dimen/item_padding"
     android:paddingEnd="@dimen/item_padding"
-
+    android:layout_marginBottom="@dimen/item_padding"
     tools:context=".MainActivity">
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="item_geofence_title, delete_icon" />
+
 
     <ImageView
         android:id="@+id/location_icon"
@@ -34,6 +43,7 @@
         android:id="@+id/item_geofence_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="250dp"
         app:layout_constraintTop_toBottomOf="@id/item_geofence_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/location_icon"
@@ -47,7 +57,6 @@
         android:layout_height="@dimen/icon_btn_item_size"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
