--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--  Text sizes  -->
     <dimen name="list_item_text_title">24sp</dimen>
     <dimen name="list_item_text_size">12sp</dimen>
 
+    <!--  Item with pixel sizes  -->
     <dimen name="icon_list_item_size">36dp</dimen>
     <dimen name="list_item_height">72dp</dimen>
     <dimen name="icon_btn_item_size">48dp</dimen>
@@ -12,6 +14,5 @@
     <dimen name="edit_text_width">200dp</dimen>
     <dimen name="edit_text_standard_min_height">48dp</dimen>
     <dimen name="pop_up_width">19dp</dimen>
-
 
 </resources>
